# github-ticker

./: Main.hs  github-ticker.cabal
